# web_apps/packages/hybridos/server/src/bff/Alerts/alerts.controller.ts
@@ -1,6 +1,9 @@
 import {
+    Body,
     Controller,
     Get,
+    Param,
+    Post,
     Query,
     UsePipes,
     ValidationPipe,
@@ -13,8 +16,13 @@ import {
 } from '@nestjs/swagger'
 import { AlertsService } from './alerts.service'
 import { ActiveAlertsResponse } from './responses/alerts.response'
+import { AlertConfigurationsResponse } from './responses/alertConfig.response'
+import { AlertsPostResponse } from './responses/alertPost.response'
 import { DefaultApiError } from 'src/exceptions/defaultResponse.exception'
-import { ActiveAlertsRequest } from './dtos/alerts.dto';
+import { AlertsRequest } from './dtos/alerts.dto';
+import { AlertConfigDTO } from './dtos/alertConfig.dto';
+import { UserFromAccessToken } from 'src/decorators/userFromAccessToken.decorator';
+import { User } from 'src/users/dtos/user.dto';
 
 @ApiTags('alerts')
 @ApiSecurity('bearerAuth')
@@ -25,7 +33,35 @@ export class AlertsController {
     @Get('active')
     @ApiOkResponse({type: ActiveAlertsResponse})
     @UsePipes(new ValidationPipe({ transform: true }))
-    async alerts(@Query() query: ActiveAlertsRequest): Promise<ActiveAlertsResponse> {
+    async alerts(@Query() query: AlertsRequest): Promise<ActiveAlertsResponse> {
         return await this.alertsService.activeAlerts(query)
+    }
+
+    @Get('configuration')
+    @ApiOkResponse({type: AlertConfigurationsResponse})
+    @UsePipes(new ValidationPipe({ transform: true }))
+    async alertConfiguration(): Promise<AlertConfigurationsResponse> {
+        return await this.alertsService.alertConfigurations()
+    }
+
+    @Post('configuration/:alertId')
+    @ApiOkResponse({type: AlertsPostResponse})
+    async postConfiguration(
+        @Body() alertConfigDTO: AlertConfigDTO,
+        @Param() alertId: {alertId: string},
+        @UserFromAccessToken() user: User,
+    ): Promise<AlertsPostResponse> {
+        const addAlertConfigResponse = await this.alertsService.updateConfig(alertId.alertId, alertConfigDTO, user.username);
+        return addAlertConfigResponse;
+    }
+
+    @Post('configuration')
+    @ApiOkResponse({type: AlertsPostResponse})
+    async updateConfiguration(
+        @Body() alertConfigDTO: AlertConfigDTO,
+        @UserFromAccessToken() user: User,
+    ): Promise<AlertsPostResponse> {
+        const addAlertConfigResponse = await this.alertsService.addNewConfig(alertConfigDTO, user.username);
+        return addAlertConfigResponse;
     }
 }
